# SDL-tutorials

./: .clang-format  .gitignore  README.md
SDL/renderer/clear/: CMakeLists.txt  clear.c
SDL/renderer/primitives/: CMakeLists.txt  primitives.c
base/: CMakeLists.txt  hello.c
